--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Trevin Shu",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.2",
     "parcel": "^2.6.2",
+    "postcss-preset-env": "^7.7.2",
     "sass": "^1.53.0"
   }
 }
